alignment issues fixing

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     align-items: center;
     align-self: center;
     /* background: #F5F5F5; */
+    width:600px;
     background: #FFFFFF;
 }
 
@@ -159,7 +160,7 @@ form {
 .popup {
     display: none;
     position: fixed;
-    margin: auto;
+/*     margin: auto; */
     width: 550px;
     height: 500px;
     background: #FFFFFF;
